_sass/base/_base.scss
:root {
  --title-color: #343A40;
  --text-color: #343A40;
  --quote-color: var(--color-grey);
  --background-color: #FFFFFF;
  --background-color-alternate: #EEEEEE;
  --background-color-code: #FDFDFD;
  --background-color-quote: var(--background-color-alternate);
  --background-color-warn: #DDAAAA;
  --background-color-highlight: #ffffaa;
  --link-color: #343A40;
  --link-underline-color: #ADB5BD;
  --link-underline-color-hover: #868E96;
  --table-color-alternate: #EEEEEE;
  --diagram-color: #000000;
  --border-color-code: var(--color-grey-light);
}

/* dark mode */
@media (prefers-color-scheme: dark) {
  :root {
    --title-color: #DDDDDD;
    --text-color: #DDDDDD;
    --quote-color: var(--text-color);
    --background-color: #2E2828;
    --background-color-alternate: #3E3838;
    --background-color-code: #222222;
    --background-color-quote: var(--background-color-alternate);
    --background-color-warn: var(--color-red-dark);
    --background-color-highlight: #666644;
    --link-color: #DDDDDD;
    --link-underline-color: #BBBBBB;
    --link-underline-color-hover: #DDDDDD;
    --table-color-alternate: #444444;
    --diagram-color: #FFFFFF;
    --border-color-code: var(--color-grey-dark);
    ::selection {
      color: #FFFFFF;
      background-color: #212529;
    }
  }
  .highlight > ::selection {
    background-color: #000000;
  }
}

////
/// Very basic styles
////

html,
body {
  box-sizing: border-box;
  margin: 0;
  color: var(--text-color);
  background-color: var(--background-color);
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

// Images
// -------------------------

img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
  border: 0;
  -ms-interpolation-mode: bicubic;
}

// We need to revert these for Google maps cause else it breaks!
%img--no-max,
.img--no-max {
  max-width: none;
}


// Figures
// -------------------------

figure > img {
  display: block;
}

figcaption {
  font-size: $small;
}

// Diagrams
// -------------------------
center.md > svg.diagram {
  stroke: var(--diagram-color);
  fill: var(--diagram-color);;
}

// Links
// -------------------------

a {
  color: var(--link-color);

  &:focus {
    outline: thin dotted;
  }
  &:hover, &:active {
    outline: none;
  }
}

:target {
  background-color: var(--background-color-highlight);
}

main a {
  text-decoration-line: underline;
  text-decoration-color: var(--link-underline-color);
  text-underline-offset: 0.1em;
  &:hover {
    text-decoration-line: underline;
    text-decoration-color: var(--link-underline-color-hover);
    text-underline-offset: 0.1em;
  }
}

// Page & Wrapper
// -------------------------

.page {
  margin-right: auto;
  margin-left: auto;
  max-width: 100%;
  padding-bottom: calc(var(--base-line) * 4);
}

.wrapper {
  box-sizing: content-box;
  margin-right: auto;
  margin-left: auto;
  max-width: 50em;
  padding-left: 10px;
  padding-right: 10px;
}

.frontpage {
  max-width: 64em;
}

// Frontpage
// -------------------------

.frontpage {
  a {
    text-decoration-line: none;
  }

  table.table-index {
    table-layout: fixed;
    line-height: 110%;
    ol, ul {
      padding-left: 1em;
      li {
        margin-bottom: 0;
        line-height: 100%;
      }
    }
  }

  th.table-topic {
    width: 5em;
    padding: 12px;
  }

  td > div, td > section {
    padding: 4px 0 8px 0;
  }
}

// Tables
// -------------------------

table.table-width-small {
  width: 30em;
}

table.table-medium {
  table-layout: fixed;
  line-height: 110%;
  font-size: 90%;
}

table.table-layout-auto {
  table-layout: auto;
}

table.table-index th, table.table-index td,
table.table-medium th, table.table-medium td{
  padding: 10px;
  text-align: left;
  vertical-align: top;
}

table.table-index tr:nth-child(even),
table.table-medium tr:nth-child(even) {
  background: var(--background-color-alternate);
}

table.table-small {
  font-size: 60%;
  text-align: center;
  line-height: 110%;
}

table.table-small tr:nth-child(even) {
  background: var(--table-color-alternate);
}

table.table-small tr th:first-child,
table.table-small tr td:first-child {
  font-weight: bold;
  border-right: 2px solid #cccccc;
}

// Lists
// -------------------------

ul,ol {
  margin-top: 0;
  margin-bottom: 0; /* var(--base-line);*/
}

ul {
  list-style-type: circle;
}

li:not(:last-child) {
  margin-bottom: 0.2em;
}

// List options
// -------------------------

// Unstyled keeps list items block level, just removes default browser padding and list-style
.list-unstyled {
  padding-left: 0;
  list-style: none;
}

// Inline turns list items into inline-block
.list-inline {
  @extend .list-unstyled;

  > li {
    display: inline-block;
    margin: 0 -5px 0 0;
  }
}

// Description Lists
// -------------------------

dl {
  margin-top: 0; // Remove browser default
  margin-bottom: var(--base-line);
}
dt,
dd {
  line-height: var(--line-height-base);
}
dt {
  font-weight: bold;
}
dd {
  margin-left: 0; // Undo browser default
}

// Blockquotes
// -------------------------

blockquote,
blockquote p,
q {
  color: var(--quote-color);
}

blockquote {
  background-color: var(--background-color-quote);
  margin-left: var(--base-line);
  margin-right: var(--base-line);
  padding-left: calc(var(--base-line) / 2);
  padding-right: calc(var(--base-line) / 2);
  border-left: 2px solid var(--color-grey-medium);
  > :last-child {
    margin-bottom: 0;
  }
}

blockquote cite {
  display: block;
  color: var(--color-grey-dark);
}

blockquote cite:before {
  content: "\2014 \0020";
}

blockquote cite a,
blockquote cite a:visited {
  color: var(--color-grey-dark);
}


// Code formatting
// -------------------------

pre,
code {
  border: 1px solid var(--border-color-code);
  border-radius: 3px;
  background-color: var(--background-color-code);
}

code {
  padding: 2px 4px 1px 4px;
  font-size-adjust: 0.5;
}

pre {
  padding: 8px 12px;
  > code {
    padding-right: 0;
    padding-left: 0;
    border: 0;
  }
}

pre.diagram {
  font-size: 60%;
}

.obsolete {
  opacity: 0.5;
}

.inline-flex {
  display: inline-flex;
}

table {
  width: 100%;
  table-layout: fixed;
  > thead > tr {
    > th, > td {
      border-bottom: 2px solid #ccc;
    }
  }
}

/* custom pages */

.about-wrapper {
  text-align: end;
}

.about {
  display: inline-flex;
  flex-direction: column;
  text-align: start;
}

.note {
  background-color: var(--background-color-highlight);
  margin: var(--base-line) calc(var(--base-line) * 3);
  padding: calc(var(--base-line) / 2) var(--base-line);
}

.warn {
  background-color: var(--background-color-warn);
  margin: var(--base-line) calc(var(--base-line) * 3);
  padding: calc(var(--base-line) / 2) var(--base-line);
}

.footnote {
  text-decoration: none;
  &:hover {
    text-decoration-line: line-through;
  }
}

